external-crates/move/crates/move-compiler/tests/development/enums/parser/pattern_ellipsis_invalid.exp
error[E01018]: invalid 'match'
   ┌─ tests/development/enums/parser/pattern_ellipsis_invalid.move:9:9
   │  
 9 │ ╭         match (x) {
10 │ │             ..
11 │ │         }
   │ ╰─────────^ Invalid 'match' form. 'match' must have at least one arm

error[E01002]: unexpected token
   ┌─ tests/development/enums/parser/pattern_ellipsis_invalid.move:10:13
   │
10 │             ..
   │             ^ Expected a call argument expression

